# libredxx

./: .clang-format  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  ez_sfp.c  ft260.h  ft260_i2c.c  ft260_i2c_read.c  read_thread.c
libredxx/: CMakeLists.txt  libredxx.h  libredxx_darwin.c  libredxx_ft260.c  libredxx_ft260.h  libredxx_linux.c  libredxx_windows.c
